# RAG_PDF_Pipeline

./: .gitignore  README.md  pyproject.toml
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
